--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1229,7 +1229,7 @@ input[type="submit"] {
   transition: box-shadow 0.3s ease 0s, -webkit-box-shadow 0.3s ease 0s;
   width: 100%;
   will-change: box-shadow;
-  border: 0.2rem solid transparent;
+  border: 0.2rem solid #424242;
   transition: all 0.3s ease-in-out;
 }
 
@@ -2041,25 +2041,33 @@ select.form_select__element {
   left: 0;
   bottom: 0;
   right: 0;
-  background-image: linear-gradient(-45deg,hsla(0,0%,100%,.08) 25%,transparent 0,transparent 50%,hsla(0,0%,100%,.08) 0,hsla(0,0%,100%,.08) 75%,transparent 0,transparent);
+  background-image: linear-gradient(
+    -45deg,
+    hsla(0, 0%, 100%, 0.08) 25%,
+    transparent 0,
+    transparent 50%,
+    hsla(0, 0%, 100%, 0.08) 0,
+    hsla(0, 0%, 100%, 0.08) 75%,
+    transparent 0,
+    transparent
+  );
   z-index: 1;
   background-size: 20px 20px;
   -webkit-animation: move 1.5s linear infinite;
   animation: move 1.5s linear infinite;
   border-radius: 20px;
-  overflow: hidden
+  overflow: hidden;
 }
 
 @keyframes move {
   0% {
-      background-position: 0 0
+    background-position: 0 0;
   }
 
   to {
-      background-position: 20px 20px
+    background-position: 20px 20px;
   }
 }
-
 
 .calc__progres_line {
   background-color: #b2c593;
