--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -399,6 +399,10 @@ body {
   font-size: 1.6rem;
   position: relative;
 }
+
+body.is_fixed {
+  overflow: hidden;
+}
 @supports (display: grid) {
   body {
     display: block;
@@ -441,6 +445,7 @@ body.body--search_open {
 .wrapper {
   position: relative;
   width: 100%;
+  overflow-y: hidden;
 }
 .base {
   -webkit-box-flex: 1;
@@ -551,6 +556,7 @@ input[type="submit"] {
   justify-content: flex-start;
   -webkit-transition: opacity 0.4s ease;
   transition: opacity 0.4s ease;
+  gap: 3rem;
 }
 .header__row:last-child {
   margin-top: 2rem;
@@ -591,7 +597,7 @@ input[type="submit"] {
 .header__menu_trigger {
   cursor: pointer;
   height: 2rem;
-  margin-left: auto;
+  /* margin-left: auto; */
   position: relative;
   width: 3rem;
   z-index: 5;
@@ -674,6 +680,15 @@ input[type="submit"] {
   flex-wrap: nowrap;
   justify-content: flex-start;
   margin-left: auto;
+}
+
+@media (max-width: 1000px) {
+  .header__contact {
+    display: none;
+  }
+  .header__row {
+    justify-content: space-between;
+  }
 }
 .header__row--mobile .header__contact {
   gap: 2rem;
@@ -1229,7 +1244,7 @@ input[type="submit"] {
   transition: box-shadow 0.3s ease 0s, -webkit-box-shadow 0.3s ease 0s;
   width: 100%;
   will-change: box-shadow;
-  border: 0.2rem solid #424242;
+  /* border: 0.2rem solid #424242; */
   transition: all 0.3s ease-in-out;
 }
 
@@ -2683,6 +2698,13 @@ input:checked ~ .calc__slide_item_icon {
   position: relative;
   width: 24rem;
 }
+
+@media (max-width: 767px) {
+  .sys_slider__manager_img_w {
+    height: 15rem;
+    width: 15rem;
+  }
+}
 .sys_slider__manager_img_w img {
   display: block;
   height: 100%;
@@ -3356,7 +3378,7 @@ input:checked ~ .calc__slide_item_icon {
   display: flex;
   /* overflow-x: hidden;
   overflow-y: auto; */
-  padding: 2rem var(--gl-indent);
+  /* padding: 2rem var(--gl-indent); */
   position: fixed;
   /* -webkit-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease; */
@@ -3367,6 +3389,12 @@ input:checked ~ .calc__slide_item_icon {
   width: 100%;
   height: 100%;
   pointer-events: none;
+}
+
+@media (max-width: 767px) {
+  .popup {
+    height: auto;
+  }
 }
 .popup.popup--req_mod {
   color: #fff;
@@ -3407,6 +3435,13 @@ input:checked ~ .calc__slide_item_icon {
   position: relative;
   width: 100%;
   pointer-events: all;
+}
+
+@media (max-width: 767px) {
+  .popup__in {
+    margin: 0;
+    border-radius: 2rem 2rem 0 0 !important;
+  }
 }
 .popup--popular .popup__in {
   max-width: 136rem;
@@ -3645,9 +3680,13 @@ input:checked ~ .calc__slide_item_icon {
   .header__menu_trigger {
     display: block;
   }
-  .header__contact,
+  .header__contact > .header__btn_calc,
   .header__yandex {
     display: none;
+  }
+
+  .header__contact {
+    gap: 4rem;
   }
   .body--open_menu_state .header__row--mobile .header__contact {
     -webkit-box-orient: vertical;
@@ -3833,6 +3872,11 @@ input:checked ~ .calc__slide_item_icon {
   .system__col.system__col--img {
     padding: 0 0 35rem;
   }
+  @media (max-width: 767px) {
+    .system__col.system__col--img {
+      padding: 0 !important;
+    }
+  }
   .system__title {
     background-color: #f5f5f5;
     border-radius: 0 0 3rem 0;
@@ -3966,6 +4010,12 @@ input:checked ~ .calc__slide_item_icon {
   }
   .sys_slider__col.sys_slider__col--img {
     padding: 0 0 35rem;
+  }
+
+  @media (max-width: 767px) {
+    .sys_slider__col.sys_slider__col--img {
+      padding: 0 !important;
+    }
   }
   .sys_slider__title:not(:last-child) {
     margin-bottom: 3rem;
@@ -5362,7 +5412,7 @@ input:checked ~ .calc__slide_item_icon {
     font-size: 2rem;
   }
   .sys_slider__info_review_info_descr {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
   .sys_slider__pag .swiper-pagination-bullet:after {
     font-size: 2.2rem;
@@ -5428,7 +5478,7 @@ input:checked ~ .calc__slide_item_icon {
     font-size: 2.6rem;
   }
   .popup_popular {
-    border-radius: 2rem !important;
+    border-radius: 2rem 2rem 0 0 !important;
     padding: 8rem 2rem 4rem !important;
   }
 }
@@ -5562,6 +5612,9 @@ input:checked ~ .calc__slide_item_icon {
 @media screen and (max-width: 768px) {
   .sys_slider__navigation {
     border-radius: 1rem;
+  }
+  .sys_slider__nav {
+    display: none;
   }
 }
 html.with-fancybox {
