--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1232,6 +1232,7 @@ input[type="submit"] {
   border: none;
   -webkit-box-shadow: inset 0 0 0 1px hsla(0, 0%, 100%, 0);
   box-shadow: inset 0 0 0 1px hsla(0, 0%, 100%, 0);
+  border: 0.1rem solid #444;
   caret-color: #444;
   color: #444;
   display: block;
